# AirLink

./: Architecture  CMakeLists.txt  DockerFile  LoggingAdapter.cpp  README.md  docker-compose.yml  🏗️ Root CMakeLists.txt
admin-dashboard/: app.js  index.html  styles.css
bench/: Benchmark.cpp  Benchmark.hpp
cloud/Frontend/src/: App.jsx
cloud/backend/: server.js
config/: access-control.yaml  city.json  firewall.json  ssid.json  system-settings.yaml
controller/: CMakeLists.txt  main.cpp
controller/digital_twin/: CMakeLists.txt  DigitalTwin.cpp  DigitalTwin.h
controller/orchestrator/: Orchestrator.cpp  Orchestrator.h
controller/scheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h
controller/southbound/:  DeviceAdapter.h  Scheduler.cpp  Scheduler.h  UniFiAdapter.cpp  UniFiAdapter.h
docs/: deployment.md  pitch-deck.md  security.md
planning/ap_placement/: commercial_plan.json  residential_plan.json
planning/backhaul/: fiber_routes.json
planning/rf/: channel_plan_24ghz.json  channel_plan_5ghz.json  channel_plan_6ghz.json
scripts/: simulate_coverage.py
site/: index.html  site.css
src/: main.cpp
src/common/: ConfigLoader.hpp  Logger.hpp  SystemConfig.hpp  UserContext.hpp
src/core/: ConnectionManager.cpp  ConnectionManager.hpp  SignalHandler.cpp  SignalHandler.hpp  connection-manager.py  signal-handler.py
src/integrations/rf/: RFProvider.hpp
src/integrations/unifi/: UniFiClient.cpp  UnifiClient.hpp
src/interfaces/: AdminPanel.cpp  AdminPanel.hpp  ApiServer.cpp  ApiServer.hpp
src/rf/: RfControllar.cpp  RfControllar.hpp
src/services/: AuthenticationService.cpp  AuthenticationService.hpp  MonitoringService.cpp  MonitoringService.hpp  authentication.py
src/sim/: NetworkSimulator.cpp  NetworkSimulator.hpp  SimAnalytics.cpp  SimAnalytics.hpp  SimAudit.cpp  SimAudit.hpp  SimBilling.cpp  SimBilling.hpp  SimCrypto.cpp  SimCrypto.hpp  SimManager.cpp  SimManager.hpp  SimPolicy.hpp  SimPolicyManager.cpp  SimPolicyManager.hpp  SimProfile.cpp  SimProfile.hpp  SimQoS.cpp  SimQoS.hpp  SimRepository.cpp  SimRepository.hpp  SimRoaming.cpp  SimRoaming.hpp  SimTenant.cpp  SimTenant.hpp  SimThreatDetection.cpp  SimThreatDetection.hpp  sim.html  sim.js
tests/: test_connection_manager.cpp
